[tool.poetry]
name = "sklepmistr"
version = "0.1.0"
description = "Wine aggregator project"
authors = ["hynek.blaha <hynek.blaha.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
