[tool.poetry]
name = "sklepmistr"
version = "0.1.0"
description = "Wine aggregator project"
authors = ["hynek.blaha <hynek.blaha.dev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["src", "tests"]
known_third_party = []
